==============================================================================

Work In Progress:
. (kfsone) Import reports stats on completion (so its more obvious it worked)
. (kfsone) "NOTE" now indicates a line that can be hidden using "-q",
. (kfsone) Deleted/Deprecated keys in .csv files are now warnings with "-i",
. (kfsone) command names can now be partial, e.g. "loc" for "local",
           "ra", "rar" or "rare" for "rares"
. (kfsone) Show stationLS and pad size in rares display
. (kfsone) Added "--stations" option to "nav" command to show station details,

v6.4.0 Jan 01 2015
. (kfsone) Added "rare" sub-command,
. (kfsone) Added RareItem table,
. (kfsone) Imported systems from EDStarCoord,
. (kfsone) Added a LOT of stations,
. (kfsone) Converted all SYSTEM names to upper case in the database,
+ Data: kfsone, gazelle

v6.3.2 Dec 31 2014
. (kfsone) Added experimental "upload-to-maddavo" (misc/madupload.py)
. (kfsone) Improved the feedback from run when routes go wrong.
. (kfsone) fixed "--link-ly" causing a 'TypeError' in various places,
. (kfsone) "nav" now supports "--via"; destinations are processed in-order.
. (kfsone) buy, sell, nav and local now have consistent presentation
  of each station's distance from the star, labelled "StnLs", while
  interstellar distances are labelled "DistLy".
. (OpenSS) Added 'quick update' to scripts/trade.bat
+ Stations, data, etc: kfsone, gazelle, shirkan

v6.3.1 Dec 28 2014
. (kfsone) Removed '--supply' from "update" completely,
. (kfsone) Improved the "--ls-penalty" from a flat line to a curve,
   so really, stupidly, ridiculously distant stations (looking at you,
   Alpha centauri) really have to be mind-blowing to show up.
. (kfsone) "run" command output shows score of routes,
. (kfsone) "misc/add-station" now has a "-u" option for updates,
. (kfsone) "misc/add-station" no-longer writes to the csv file
   (after adding stations do: trade.py export --table Station)
. (kfsone) Fixed #111 import not rebuilding cache